Changed CSS settings

--- a/js/products/productsTmpl.html
+++ b/js/products/productsTmpl.html
@@ -1,6 +1,6 @@
-<h1> Product Page </h1>
-
-<div style="border: 1px dashed #ccc; margin: 20px auto; width: 300px; " ng-repeat="item in productData">
+<h2> Product Page </h2>
+<hr style="width: 50%;">
+<div style="border: 1px dashed #fff; margin: 20px auto; width: 300px; color: #fff; " ng-repeat="item in productData">
 	Type: <strong>{{ item.type}}</strong> <br>
 	Color: {{ item.color }} <br>
 	Size: {{ item.size }} <br>
